--- a/.classpath
+++ b/.classpath
@@ -2,17 +2,14 @@
 <classpath>
 	<classpathentry excluding="ibis/smartsockets/viz/" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="external/commons-jxpath-1.1.jar"/>
-	<classpathentry kind="lib" path="external/commons-logging-api.jar"/>
-	<classpathentry kind="lib" path="external/commons-logging.jar"/>
-	<classpathentry kind="lib" path="external/jmdns-3.4.0.jar"/>
-	<classpathentry kind="lib" path="external/jstun-0.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="external/jmdns-3.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="external/jstun-0.6.1.jar"/>
 	<classpathentry kind="lib" path="external/juds-0.94-universal.jar"/>
 	<classpathentry kind="lib" path="external/log4j-1.2.13.jar"/>
-	<classpathentry kind="lib" path="external/sbbi-upnplib-1.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="external/sbbi-upnplib-1.0.2.jar"/>
 	<classpathentry kind="lib" path="external/slf4j-api-1.5.3.jar"/>
 	<classpathentry kind="lib" path="external/slf4j-log4j12-1.5.3.jar"/>
 	<classpathentry kind="lib" path="external/TGGraphLayout-ibis-1.58.jar"/>
-	<classpathentry kind="lib" path="external/trilead-ssh2-r13339-CJ.jar"/>
+	<classpathentry exported="true" kind="lib" path="external/trilead-ssh2-r13339-CJ.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
